feat: added top skipped songs

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,10 @@
           Top albums
         </button>
 
+        <button onclick="window.location.href='top-skipped-songs';">
+          Top skipped songs
+        </button>
+
 
     </body>
 </html>
