feat: retrieve top artists

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,10 @@
 
         <!-- <a href="top-songs"> Your top songs</a> -->
 
+        <button onclick="window.location.href='top-artists';">
+          Top artists
+        </button>
+
         <button onclick="window.location.href='top-songs';">
           Top songs
         </button>
