--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
     <body>
         <h1>&#127911; Enhanced Spotify stats &#127911;</h1>
 
-        <!-- <a href="top-songs"> Your top songs</a> -->
+        <p> This basic flask app visualizes your enhanced Spotify statistics.
+            <br> The app runs completely on your local machine and does not track any information! </p>
 
         <button onclick="window.location.href='top-artists';">
           Top artists
@@ -21,8 +22,15 @@
           Top albums
         </button>
 
+        <br />
+        <br />
+
         <button onclick="window.location.href='top-skipped-songs';">
           Top skipped songs
+        </button>
+
+        <button onclick="window.location.href='hours-listened';">
+          Hours listened
         </button>
 
 
